--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   firebase_core: ^1.24.0
   cloud_firestore: ^3.5.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
